--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.6",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
