--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 REACT_APP_BASE_URL="https://gy8a0m85ci.execute-api.us-east-1.amazonaws.com/v1"
+REACT_APP_GOOGLE_PLACES_API="https://addressvalidation.googleapis.com/v1:validateAddress?key=AIzaSyC_bgUWAymO0NfPmyDkz9H2V_M1VMmOtT0"
